# sdk-python

./: .gitignore  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
examples/: basic_tcp.py
squirreldb/: __init__.py  cache.py  client.py  protocol.py  query.py  storage.py  tcp.py  types.py
tests/: __init__.py  test_cache.py  test_client.py  test_protocol.py  test_query.py  test_storage.py  test_tcp.py
