[project]
name = "squirreldb-sdk"
version = "0.1.0"
description = "Client SDK for SquirrelDB realtime database"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["squirreldb", "database", "realtime", "websocket", "tcp"]
dependencies = ["websockets>=12.0", "msgpack>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["squirreldb"]
